Fixed Sony A7 Link

--- a/about-me.html
+++ b/about-me.html
@@ -53,7 +53,7 @@
 
         <section class="occupation">
             <h2 class="headline-md">Taking cool pictures</h2>
-            <p class="body-lg regular">Whether with my iPhone or my beloved <a class="external link" target="_blank" href="https://www.external linkedin.com/in/nabil-bhd">Sony A7</a>, I love noticing and photographing the moment—or taking amazing portraits. Which is probably the only reason my friends keep me around <sub>/s</sub>.</p>
+            <p class="body-lg regular">Whether with my iPhone or my beloved Sony A7, I love noticing and photographing the moment—or taking amazing portraits. Which is probably the only reason my friends keep me around <sub>/s</sub>.</p>
             <div class="gallery">
                 <img class="gallery-img" src="assets/about-me/aurora.jpg">
                 <img class="gallery-img" src="assets/about-me/bacalar-sunset.jpg">
