--- a/about-me.html
+++ b/about-me.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nabil Benhadi</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/x-icon" href="assets/favicon/light.svg" media="(prefers-color-scheme: light)">
+    <link rel="icon" type="image/x-icon" href="assets/favicon/dark.svg" media="(prefers-color-scheme: dark)">
 </head>
 <body>
     <!-- Header -->
@@ -17,10 +19,10 @@
             </a></div>
             <div id="menu" >
                 <div class="body-lg">
-                    <a class="menu link" style="color:#000;" href="index.html#work">Work</a>
+                    <a class="menu link" href="index.html#work">Work</a>
                 </div>
                 <div class="body-lg">
-                    <a class="menu link" style="color:#000;" href="#contact">Contact</a>
+                    <a class="menu link" href="#contact">Contact</a>
                 </div>
             </div>
         </div>
@@ -32,7 +34,7 @@
             <div class="namecard-description">
                 <h1 class="display">Nabil Benhadi</h1>
                 <p class="body-lg regular" style="margin-bottom: 16px;">Senior Product Designer</p>
-                <p class="headline-sm">With a background in Visual Arts and Design, and a strong interest in Human Psychology, and Engineering—I sought to become a Product Designer. I combine all of these skills and interests to design products that feel intuitive and high-end, and bring real world value.</p>
+                <p class="headline-sm" style="::selection{background-color: red;}">With a background in Visual Arts and Design, and a strong interest in Human Psychology, and Engineering—I sought to become a Product Designer. I combine all of these skills and interests to design products that feel intuitive and high-end, and bring real world value.</p>
             </div>
             <img class="avatar" src="assets/profile-picture.png">
         </div>
@@ -46,8 +48,8 @@
             <h2 class="headline-md">Travelling the world</h2>
             <p class="body-lg regular">I live in constant anticipation of my next trip.</p>
             <div class="gallery">
-                <img class="gallery-img" src="assets/about-me/chichen-itza.jpg">
-                <img class="gallery-img" src="assets/about-me/nusa-penida.jpg">
+                <img class="gallery-img" src="assets/about-me/chichen-itza.png">
+                <img class="gallery-img" src="assets/about-me/nusa-penida.png">
             </div>
         </section>
 
@@ -55,30 +57,31 @@
             <h2 class="headline-md">Taking cool pictures</h2>
             <p class="body-lg regular">Whether with my iPhone or my beloved Sony A7, I love noticing and photographing the moment—or taking amazing portraits. Which is probably the only reason my friends keep me around <sub>/s</sub>.</p>
             <div class="gallery">
-                <img class="gallery-img" src="assets/about-me/aurora.jpg">
-                <img class="gallery-img" src="assets/about-me/bacalar-sunset.jpg">
+                <img class="gallery-img" src="assets/about-me/aurora.png">
+                <img class="gallery-img" src="assets/about-me/bacalar-sunset.png">
             </div>
         </section>
 
         <section class="occupation">
-            <h2 class="headline-md">Painting & Drawing</h2>
-            <p class="body-lg regular">When I find some spare time—which is rare—I love painting portraits. Some of my favourite artist and inspirations are <a class="external link" href="index.html">Lois VB</a>, <a class="external link" href="index.html">Dominik Mayer</a>, <a class="external link" href="index.html">Eliza Ivanova</a>, and <a class="external link" href="index.html">Malika Favre</a>.</p>
-            <p class="body-lg regular">My all time favourite artist though, is <a class="external link" href="index.html">Kim Jung Gi</a>, who recently passed away. His talent was out of this world so definitely check out his work.</p>
+            <h2 class="headline-md">Painting</h2>
+            <p class="body-lg regular">When I find some spare time—which is rare—I love painting portraits. I occasionally post on my <a class="external link" target="_blank"href="https://www.instagram.com/ndeavor.95">art page on Instagram</a>.</p>
+            <p class="body-lg regular">Some of my favourite artist and inspirations are <a class="external link" target="_blank" href="https://www.instagram.com/loisvb/">Lois VB</a>, <a class="external link" target="_blank"href="https://www.instagram.com/dominikmayerart/">Dominik Mayer</a>, <a class="external link" target="_blank" href="https://www.instagram.com/eleeza/">Eliza Ivanova</a>, and <a class="external link" target="_blank" href="https://www.instagram.com/malikafavre/">Malika Favre</a>. My all time favourite artist though, is <a class="external link" target="_blank" href="https://www.instagram.com/kimjunggius/?hl=en">Kim Jung Gi</a>, who recently passed away. His talent was out of this world so definitely check out his work.</p>
+            <p class="body-lg regular"></p>
             <div class="gallery">
-                <img class="gallery-img" src="assets/about-me/painting-2.jpg">
-                <img class="gallery-img" src="assets/about-me/painting.jpg">
+                <img class="gallery-img" src="assets/about-me/painting-2.png">
+                <img class="gallery-img" src="assets/about-me/painting.png">
             </div>
         </section>
 
     </section>
     
 
-    <!-- Contact -->
-    <section id="contact">
+     <!-- Contact -->
+    <section id="contact" style="overflow:hidden;">
         <h2 class="headline-sm">Contact</h2>
-        <p class="headline-lg">I'm always open to new opportunities. Feel free to reach out on <a class="external link" style="text-overflow: ellipsis;" href="mailto:contact@nabilbenhadi.com">contact@nabilbenhadi.com</a>.</p>
+        <p class="headline-lg">I'm always open to new opportunities. Feel free to reach out on <a class="external link" href=mailto:contact@nabilbenhadi.com>contact@nabilbenhadi.com</a></p>
         <p class="headline-sm">Or, you can connect with me on <a class="external link" target="_blank" href="https://www.linkedin.com/in/nabil-bhd">LinkedIn</a> and <a class="external link" target="_blank" href="https://www.instagram.com/nabil.bhd">Instagram</a>.</p>
-        <p class="headline-sm">You can also go through my <a class="external link" target="_blank" href="https://www.instagram.com/nabil.bhd">resume</a>.</p>
+        <p class="headline-sm">You can also go through my <a class="external link" target="_blank" href="files/nb_resume.pdf">resume</a>.</p>
 
         <br />
         
