intro message update

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Intro -->
     <section id="intro" class="volt">
         <h1 class="headline-sm">Hey, I'm Nabil.</h1>
-        <p class="headline-lg">I'm a Product Designer with over 7 years of experience. I bring strategic business growth by providing solutions that meet <span class="highlighted">user needs</span>. I design visually striking products and experiences that are rooted in data and research.</p>
+        <p class="headline-lg">I'm a Product Designer with 7+ years of experience, driving strategic business growth through user-centered, visually striking solutions grounded in data and research.</p>
         <p class="headline-sm" ><a class="link" href="about-me.html">Learn more about me </a></p>
     </section>
 
