removed "figure" mention

--- a/my-telenet.html
+++ b/my-telenet.html
@@ -95,15 +95,15 @@
                 <h3>Matching users’ mental model: finding the right information architecture</h3>
                     <p>We started by listing tasks a users can (or should be able to) perform on our digital platforms in no particular order of priority. We then conducted a card sorting exercise, giving us an idea of a what our IA should look like.</p>
                     <img class="inline-img" src="assets/case-studies/my-telenet/card-sort.png">
-                    <p class="note"><small>Figure 2 — Card sorting tasks</small></p>
+                    <p class="note"><small>Card sorting tasks</small></p>
                     <p>We formed a hypothetical IA, conducted tree testing, and fine-tuned it until we reached a satisfactory success rate of 80%. </p>
                     <img class="inline-img" src="assets/case-studies/my-telenet/tree-structure.png">
-                    <p class="note"><small>Figure 3 — Preview of the new tree structure</small></p>
+                    <p class="note"><small>Preview of the new tree structure</small></p>
             <hr>
             <h2>Validation</h2>
                 <p>After finding the a suitable IA we went ahead and started shaping early concepts/wireframes into prototypes for usability testing. We framed them to test high priority tasks that would showcase whether the manifestation of the architecture was clear enough to a user.</p>
                 <img class="break-img" src="assets/case-studies/my-telenet/lofi_testing.png">
-                <p class="note"><small>Figure 4 — Low fidelity testing prototypes</small></p>
+                <p class="note"><small>Low fidelity testing prototypes</small></p>
             <h3>Key insights</3>
                 <ul>
                     <li><strong>Navigating felt intuitive.</strong> During high-fidelity wireframe testing, users did not encounter difficulties navigating and finding solutions for their assigned tasks. Validating the tree structure and first wireframes.</li>
@@ -115,7 +115,7 @@
             <h2>Planning</h2>
                 <p>To fit the agile nature of the project, we chose to cut up the redesign into smaller increments (or phases) that could each be release candidates for the end-user, without feeling like a broken experience. The first phase consisted of shaping the navigation to fit the new information architecture, shifting and lifting existing blocks to where they belong. The subsequent phases all consisted of redesigning individual blocks.</p>
                 <img class="inline-img" src="assets/case-studies/my-telenet/planning.png">
-                <p class="note"><small>Figure 5 — Incremental releases</small></p>
+                <p class="note"><small>Incremental releases</small></p>
                 <h3>Example of more granular improvements</h3>
                 <ul>
                     <li>Bubbles: when leaving out the “used” or “available” labels, there was a 50-50 split of users thinking the shown value was remaining data vs. used data.</li>
@@ -123,23 +123,23 @@
                     <li>Users expected the bar to fill up left to right, versus empty out from right to left.</li>
                 </ul>
                 <img class="break-img" src="assets/case-studies/my-telenet/bubbles.png">
-                <p class="note"><small>Figure 6 — Left: old usage visualition; Right: redesigned usage visualisation.</small></p>
+                <p class="note"><small>Left: old usage visualition; Right: redesigned usage visualisation.</small></p>
             <h3>Collaboration &amp; Implementation</h3>
                 <!-- <p><strong>I collaborated closely with engineers</strong> to ensure pixel-perfect, functional results. Together, we built a <strong>strong Design System</strong> (components and patterns) to improve efficiency, scalability, and consistency. </p> -->
                 <p>We worked in an agile setup to collaborate and deliver efficiently. Our goal was to favor multi-disciplinary discussions over rigid handover processes. This was a challenge to maintain in a company in a company where processes and fragmented ownership reinged king. However, we managed to make a strong case for end-to-end ownership.</p>
                 <p>We were able to deliver high quality work that delivered on the promise with a fast pace, and ended up leading by example.</p>
                 <img class="break-img" src="assets/case-studies/my-telenet/design-system.png">
-                <p class="note"><small>Figure 7 — Examples of mordenised components</small></p>
+                <p class="note"><small>Examples of mordenised components</small></p>
                 <div class="break-img">
                     <img src="assets/case-studies/my-telenet/dev-collaboration.png" alt="Collaboration with developers">
                     <img src="assets/case-studies/my-telenet/dev-collaboration-2.png" alt="Collaboration with developers">
                     <img src="assets/case-studies/my-telenet/dev-collaboration-3.png" alt="Collaboration with developers">
                 </div>
-                 <p class="note"><small>Figure 8–10 — Examples of detailed designs used for handover</small></p>
+                 <p class="note"><small>Examples of detailed designs used for handover</small></p>
             <hr>
             <h2>Showcase</h2>
                 <img class="break-img" src="assets/case-studies/my-telenet/design-tokens.png">
-                <p class="note"><small>Figure 8 — Themes such as dark mode powered by Design Tokens</small></p>
+                <p class="note"><small>Themes such as dark mode powered by Design Tokens</small></p>
                 <img class="break-img" src="assets/case-studies/my-telenet/products.png">
                 <img class="break-img" src="assets/case-studies/my-telenet/products-2.png">
                 <img class="break-img" src="assets/case-studies/my-telenet/billing.png">
