--- a/my-telenet.html
+++ b/my-telenet.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/x-icon" href="assets/favicon/light.svg" media="(prefers-color-scheme: light)">
     <link rel="icon" type="image/x-icon" href="assets/favicon/dark.svg" media="(prefers-color-scheme: dark)">
+    <meta name="theme-color" content="#EAFF00">
 </head>
 <body>
      <!-- Header -->
