evnt & visual showcase

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </a> -->
 
         <!-- Event -->
-        <!-- <a class="article" href="evnt.html">
+        <a class="article" target="_blank" href="https://www.figma.com/design/XWAhiUjrWgNP8ryPqOBvM1/evnt-showcase?node-id=1-2&p=f">
             <img class="thumbnail" src="assets/thumbnails/evnt.png">
             <div class="content">
                 <div class="tag-row">
@@ -148,10 +148,11 @@
                     <span class="tag">Product Designer</span>
                     <span class="tag">2022–2025</span>
                 </div>
-                <h3 class="headline-sm">Designing a social event planner from scratch</h3>
-                <p class="body-lg link">View project </p>
+                <h3 class="headline-sm">Visual design showcase: social event planner</h3>
+                <p class="body-lg external link">View project</p>
+                <p class="body-md regular subtle">🔒 Password protected Figma file</p>
             </div>
-        </a> -->
+        </a>
 
         <!-- Proximus -->
         <!-- <a class="article" href="proximus.html">
@@ -169,17 +170,19 @@
         </a> -->
 
         <!-- UI Showcase -->
-        <!-- <a class="article" href="telenet-brand-refresh.html">
-            <img class="thumbnail" src="assets/thumbnails/evnt.png">
+        <a class="article" href="visual-design-showcase.html">
+            <img class="thumbnail" src="assets/thumbnails/visual-design-showcase.png">
             <div class="content">
                 <div class="tag-row">
                     <span class="tag">UI Design</span>
+                    <span class="tag">Visual Identity</span>
+                    <span class="tag">Branding</span>
                     <span class="tag">2018–2025</span>
                 </div>
                 <h3 class="headline-sm">Visual Design Showcase</h3>
                 <p class="body-lg link">View projects</p>
             </div>
-        </a> -->
+        </a>
     </section>
 
     <!-- Contact -->
