contact email update

--- a/my-telenet.html
+++ b/my-telenet.html
@@ -155,10 +155,10 @@
     </section>
     
 
-     <!-- Contact -->
+    <!-- Contact -->
     <section id="contact" style="overflow:hidden;">
         <h2 class="headline-sm">Contact</h2>
-        <p class="headline-lg">I'm always open to new opportunities. Feel free to reach out on <a class="external link" href=mailto:contact@nabilbenhadi.com>contact@nabilbenhadi.com</a></p>
+        <p class="headline-lg">I'm always open to new opportunities. Feel free to reach out on <a class="external link" href=mailto:nabil.benhadi@gmail.com>nabil.benhadi@gmail.com</a></p>
         <p class="headline-sm">Or, you can connect with me on <a class="external link" target="_blank" href="https://www.linkedin.com/in/nabil-bhd">LinkedIn</a> and <a class="external link" target="_blank" href="https://www.instagram.com/nabil.bhd">Instagram</a>.</p>
         <p class="headline-sm">You can also go through my <a class="external link" target="_blank" href="files/nb_resume.pdf">resume</a>.</p>
 
